--- a/riscvsingle/quartus/riscvsingle.qsf
+++ b/riscvsingle/quartus/riscvsingle.qsf
@@ -19,7 +19,7 @@
 #
 # Quartus Prime
 # Version 20.1.1 Build 720 11/11/2020 SJ Lite Edition
-# Date created = 17:25:57  junho 22, 2023
+# Date created = 20:18:02  julho 10, 2023
 #
 # -------------------------------------------------------------------------- #
 #
@@ -37,13 +37,15 @@
 # -------------------------------------------------------------------------- #
 
 
-set_global_assignment -name FAMILY "Cyclone V"
-set_global_assignment -name DEVICE 5CGXFC7C7F23C8
-set_global_assignment -name TOP_LEVEL_ENTITY riscvsingle
+set_global_assignment -name FAMILY "MAX 10"
+set_global_assignment -name DEVICE 10M08DAF484C8G
+set_global_assignment -name TOP_LEVEL_ENTITY alu
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.1
-set_global_assignment -name PROJECT_CREATION_TIME_DATE "17:25:57  JUNHO 22, 2023"
+set_global_assignment -name PROJECT_CREATION_TIME_DATE "20:18:02  JULHO 10, 2023"
 set_global_assignment -name LAST_QUARTUS_VERSION "20.1.1 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
@@ -52,24 +54,24 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
-set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
-set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
-set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
-set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_global_assignment -name VHDL_FILE ../src/riscvsingle.vhd
-set_global_assignment -name VHDL_FILE ../src/controller.vhd
-set_global_assignment -name VHDL_FILE ../src/aludec.vhd
-set_global_assignment -name VHDL_FILE ../src/maindec.vhd
-set_global_assignment -name VHDL_FILE ../src/datapath.vhd
-set_global_assignment -name VHDL_FILE ../src/flopr.vhd
-set_global_assignment -name VHDL_FILE ../src/adder.vhd
-set_global_assignment -name VHDL_FILE ../src/mux2.vhd
-set_global_assignment -name VHDL_FILE ../src/mux3.vhd
-set_global_assignment -name VHDL_FILE ../src/regfile.vhd
-set_global_assignment -name VHDL_FILE ../src/riscv_pkg.vhd
-set_global_assignment -name VHDL_FILE ../src/extend.vhd
-set_global_assignment -name VHDL_FILE ../src/alu.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VHDL_FILE ../src/riscv_pkg.vhd
+set_global_assignment -name VHDL_FILE ../src/riscvsingle.vhd
+set_global_assignment -name VHDL_FILE ../src/regfile.vhd
+set_global_assignment -name VHDL_FILE ../src/mux3.vhd
+set_global_assignment -name VHDL_FILE ../src/mux2.vhd
+set_global_assignment -name VHDL_FILE ../src/maindec.vhd
+set_global_assignment -name VHDL_FILE ../src/flopr.vhd
+set_global_assignment -name VHDL_FILE ../src/flopenr.vhd
+set_global_assignment -name VHDL_FILE ../src/extend.vhd
+set_global_assignment -name VHDL_FILE ../src/dmem.vhd
+set_global_assignment -name VHDL_FILE ../src/datapath.vhd
+set_global_assignment -name VHDL_FILE ../src/controller.vhd
+set_global_assignment -name VHDL_FILE ../src/aludec.vhd
+set_global_assignment -name VHDL_FILE ../src/alu.vhd
+set_global_assignment -name VHDL_FILE ../src/adder.vhd
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
